traces/bug_130.txt
examples++-load/ffrandom.cpp:102: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/ffrandom.cpp:102:1: initialization of callDoLoadInit
100.     Global.Add("random","(",new OneOperator_0<long>(ffrandom));
101.   }
102. > LOADFUNC(init); 
103.   /* These real versions are due to Isaku Wada, 2002/01/09 added */
104.   

examples++-load/ffrandom.cpp:102:1: call to DoLoadInit
100.     Global.Add("random","(",new OneOperator_0<long>(ffrandom));
101.   }
102. > LOADFUNC(init); 
103.   /* These real versions are due to Isaku Wada, 2002/01/09 added */
104.   

examples++-load/ffrandom.cpp:102:1: call to addInitFunct
  100.     Global.Add("random","(",new OneOperator_0<long>(ffrandom));
  101.   }
  102. > LOADFUNC(init); 
  103.   /* These real versions are due to Isaku Wada, 2002/01/09 added */
  104.   

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
